--- a/style.css
+++ b/style.css
@@ -222,3 +222,51 @@
   .IMGPtsJugadorUnoPop, .IMGPtsJugadorDosPop{
     margin-top: 2px;
   }
+
+  .parejaZona{
+      height: 70px;
+      width: 100%;
+      position: relative;
+  }
+  #nombre1{
+    position: absolute;
+    font-size: 13px;
+    top: 10px;
+    left: 5%;
+  }
+  #nombre2{
+    position: absolute;
+    font-size: 13px;
+    top: 35px;
+    left: 5%;
+  }
+  .divisionesZona{
+    position: absolute;
+    width: 23%;
+    top: 35%;
+    left: 45%;
+  }
+  .categoriauno{
+    position: absolute;
+    border-radius: 10px; 
+    left: 0;
+    width: 34px; 
+    height: 17px;
+  }
+  .categoriados{
+    position: absolute;
+    border-radius: 10px; 
+    right: 0;
+    width: 34px; 
+    height: 17px;
+  }
+  #puntajePareja{
+    position: absolute;
+    top: 30%;
+    right: 5%;
+    color: white;
+  }
+  .Zonas{
+      margin: 4vh 0;
+  }
+
