--- a/style.css
+++ b/style.css
@@ -270,3 +270,69 @@
       margin: 4vh 0;
   }
 
+/* Llave del torneo */
+
+.fondogris{
+    width: 20px;
+    background-color: grey;
+}
+.fondonaranja{
+    width: 20px;
+    background-color: blue;
+}
+.nombresLlave, .nombresLlaveBye{
+    font-weight: 300;
+    width: 100px;
+    text-align: center;
+}
+.nombresLlave{
+    font-weight: 300;
+    width: 700px;
+    text-align: center;
+}
+.fondogris, .fondonaranja, .nombresLlave, .nombresLlaveBye, .fondoVerdeBye{
+    border: 1px solid rgb(24, 24, 24);
+}
+.tabla{
+    margin: 20px 0;
+    width: 250px;
+}
+.octavos .tabla{
+    margin: 95px 0;
+}
+.cuartos .tabla{
+    margin: 245px 0;
+}
+.semifinal .tabla{
+    margin: 560px 0;
+}
+.final .tabla{
+    margin: 320px 0;
+}
+.divMayor{
+    display: flex;
+    width: auto;
+}
+#showData{
+    overflow-x: scroll;
+    width: auto;
+}
+.divMayor .dieciseisavos{
+    width: 250px;
+}
+.divMayor .octavos{
+    width: 250px;
+    margin-top: -35px;
+}
+.divMayor .cuartos{
+    width: 250px;
+    margin-top: -115px;
+}
+.divMayor .semifinal{
+    width: 250px;
+    margin-top: -280px;
+}
+.divMayor .final{
+    width: 250px;
+    margin-top: 80px;
+}
